syntax = "proto3";

package proto;

option go_package="/";

service UserService {
  rpc GetUserById (UserRequest) returns (UserResponse);
  rpc GetUsersByIds (UserIdsRequest) returns (UserListResponse);
}

message UserRequest {
  int32 user_id = 1;
}

message UserIdsRequest {
  repeated int32 user_ids = 1;
}

message User {
  int32 id = 1;
  string fname = 2;
  string city = 3;
  int64 phone = 4;
  double height = 5;
  bool married = 6;
}

message UserResponse {
  User user = 1;
}

message UserListResponse {
  repeated User users = 1;
}
